# solana-poc

./: .eslintrc.cjs  .solitarc.js  Anchor.toml  Cargo.toml  README.md  dprint.json  kinobi.js  kinobi.ts  package.json  pnpm-lock.yaml  tsconfig.json
.crates/: .crates2.json
config/: kinobi.js
programs/echo/: Cargo.toml
programs/echo-crosschain/: Cargo.toml
programs/echo/src/: account.rs  constants.rs  contexts.rs  error.rs  lib.rs  message.rs
programs/echo/src/context/: accept_offer_context.rs  create_offer_context.rs  initialize_context.rs  mod.rs  receive_message_context.rs  register_emitter_context.rs  send_message_context.rs
programs/echo/src/enums/: mod.rs  offer_state.rs
programs/echo/src/instructions/: accept_offer.rs  create_offer.rs  initialize.rs  mod.rs  receive_message.rs  register_emitter.rs  send_message.rs
programs/echo/src/program_accounts/: escrow_authority.rs  mod.rs  offer.rs
programs/echo/src/state/: config.rs  received.rs
programs/echo/src/types/: address.rs  message.rs  mod.rs  offer.rs  offer_accepted_message.rs  offer_canceled_message.rs  offer_created_message.rs  offer_id.rs  offer_item.rs  offer_items.rs  token_id.rs
programs/echo_crosschain/: Cargo.toml
programs/echo_crosschain/src/: constants.rs  lib.rs
programs/echo_crosschain/src/context/: initialize_context.rs  mod.rs  receive_message_context.rs  register_emitter_context.rs  send_message_context.rs
programs/solana/: Cargo.toml
programs/solana/src/: lib.rs
tests/: solana.ts  wormhole.test.ts
tests/helpers/: get-program.ts  utils.ts
