[package]
name = "echo"
version = "0.1.0"
edition = "2021"
description = "echo"

[lib]
crate-type = ["cdylib", "lib"]
name = "echo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
