[package]
name = "echo"
version = "0.1.0"
edition = "2021"
description = "echo"

[lib]
crate-type = ["cdylib", "lib"]
name = "echo"

[features]
default = ["devnet"]
mainnet = ["wormhole-anchor-sdk/mainnet"]
testnet = ["wormhole-anchor-sdk/solana-devnet"]
devnet = ["wormhole-anchor-sdk/tilt-devnet"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
ethereum-types-solana = "0.1.0"
mpl-token-metadata = "4.1.2"
solana-program = "1.18.12"
wormhole-anchor-sdk = { version = "0.29.0-alpha.1", default-features = false }
